--- a/soft_knuckles.vcxproj
+++ b/soft_knuckles.vcxproj
@@ -156,6 +156,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dprintf.cpp" />
+    <ClCompile Include="socket_notifier.cpp" />
     <ClCompile Include="soft_knuckles_config.cpp" />
     <ClCompile Include="soft_knuckles_debug_handler.cpp" />
     <ClCompile Include="soft_knuckles_device.cpp" />
@@ -163,6 +164,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dprintf.h" />
+    <ClInclude Include="socket_notifier.h" />
     <ClInclude Include="soft_knuckles_config.h" />
     <ClInclude Include="soft_knuckles_debug_handler.h" />
     <ClInclude Include="soft_knuckles_device.h" />
